updating web logo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vm-32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Open Graph Meta Tags for social sharing -->
+    <meta property="og:title" content="Virtec Marketing" />
+    <meta property="og:description" content="More clients, more growth, guaranteed. We are here to help your business attract more customers through effective marketing" />
+    <meta property="og:image" content="/main-logo.png" />
+    <meta property="og:url" content="https://www.virtecmarketing.com" />
+    <meta property="og:type" content="website" />
     <title>Virtec Marketing</title>
   </head>
   <body>
