--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vm-32.png" />
+    <link rel="icon" type="image/svg+xml" href="/virtec-32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Open Graph Meta Tags for social sharing -->
     <meta property="og:title" content="Virtec Marketing" />
