--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Open Graph Meta Tags for social sharing -->
     <meta property="og:title" content="Virtec Marketing" />
     <meta property="og:description" content="More clients, more growth, guaranteed. We are here to help your business attract more customers through effective marketing" />
-    <meta property="og:image" content="/main-logo.png" />
+    <meta property="og:image" content="/logo.jpeg" />
     <meta property="og:url" content="https://www.virtecmarketing.com" />
     <meta property="og:type" content="website" />
     <title>Virtec Marketing</title>
